# uniwatch

./: .dockerignore  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml  domain  schema.sql  subreddits.json
.aws-sam/: build.toml
.github/workflows/: deploy.yml
.past/frontend/: index.html  vite.config.ts
.past/next/: app.ts  dbTypes.ts  queryTypes.ts
backend/: eslint.config.mts  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
db/: Dockerfile  db.py  requirement.txt  schema.sql  seed_subreddits.py
env/: .sops.yaml  db.enc  decrypt_env.sh  encrypt_env.sh  openrouter_api.enc  reddit_api.enc
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infra/: .terraform.lock.hcl  database.tf  ecs.tf  iam.tf  main.tf  outputs.tf  security_groups.tf  ssm.tf  terraform.tf  variables.tf
infra/.infracost/: pricing.gob
lambda/: .gitignore  README.md  package-lock.json  samconfig.toml  template.yaml
lambda/.aws-sam/: build.toml
lambda/events/: event.json
lambda/query/: app.ts  package-lock.json  package.json  tsconfig.json
next/: Dockerfile  db.ts  next.config.ts  package-lock.json  package.json
next/app/: actions.ts  layout.tsx  page.tsx
next/utils/: cn.ts  db.ts  dbTypes.ts
scrape/: Dockerfile  pyproject.toml  requirement.txt
scrape/certs/: global-bundle.pem
scrape/src/: backfill_gallery.py  classifier.py  db.py  main.py  post_score.py  scrape.py  seed_subreddits.py
scrape/src/scrape/: main.py  mongo.py  scrape.py
scripts/: init-db.py
shared/: subreddits.json
(+102 files in other folders)
