[project]
name = "scrape"
version = "0.1.0"
description = ""
authors = [
    {name = "Minh7080",email = "minhtuannguyen642005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "praw (>=7.8.1,<8.0.0)",
    "asyncpraw (>=7.8.1,<8.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]

packages = [
    { include = "main", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
start = "scrape.main:main"
